--- a/src/styles/icomoon.css
+++ b/src/styles/icomoon.css
@@ -144,6 +144,9 @@
 .icon-thumbs-o-down:before {
   content: "\f088";
 }
+.icon-star-half:before {
+  content: "\f089";
+}
 .icon-github-square:before {
   content: "\f092";
 }
@@ -171,8 +174,20 @@
 .icon-paperclip:before {
   content: "\f0c6";
 }
+.icon-floppy-o:before {
+  content: "\f0c7";
+}
+.icon-save:before {
+  content: "\f0c7";
+}
 .icon-table:before {
   content: "\f0ce";
+}
+.icon-caret-down:before {
+  content: "\f0d7";
+}
+.icon-caret-up:before {
+  content: "\f0d8";
 }
 .icon-caret-left:before {
   content: "\f0d9";
@@ -197,6 +212,12 @@
 }
 .icon-sort-up:before {
   content: "\f0de";
+}
+.icon-rotate-left:before {
+  content: "\f0e2";
+}
+.icon-undo:before {
+  content: "\f0e2";
 }
 .icon-comment-o:before {
   content: "\f0e5";
@@ -252,4 +273,3 @@
 .icon-coin-euro:before {
   content: "\e93c";
 }
-
