--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -584,10 +584,10 @@ input[type='radio'].hidden-input {
 .section__edit-actions {
   position: absolute;
   right: 1rem;
-  top: 0;
+  top: -.5rem;
 }
 .edit-actions__button {
-  margin: 0 0.5rem;
+  margin: 0 0.8rem;
 }
 .add-form__user-error {
   top: 9.5rem;
