Update logic in RecipePage and associated reducers
We are now doing a full update of each recipe on each 'save', this is more convenient if I need to change the UI later it will still work

--- a/src/styles/recipe-page.css
+++ b/src/styles/recipe-page.css
@@ -68,3 +68,14 @@
 .recipe textarea {
   min-height: 5rem;
 }
+.section__edit-actions {
+  position: absolute;
+  right: 1rem;
+  top: -.5rem;
+}
+.edit-actions__button {
+  margin: 0 0.8rem;
+}
+.recipe-main__edit-actions .edit-actions__button {
+  margin: 0.8rem;
+}
