--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -409,6 +409,7 @@ button:disabled {
   background-position: center;
   cursor: pointer;
   overflow: hidden;
+  font-size: 0;
   color: rgba(0, 0, 0, 0);
   transition: border-color 0.3s;
 }
@@ -580,14 +581,6 @@ input[type='radio'].hidden-input {
 }
 .section__title {
   margin-bottom: 1.5rem;
-}
-.section__edit-actions {
-  position: absolute;
-  right: 1rem;
-  top: -.5rem;
-}
-.edit-actions__button {
-  margin: 0.8rem;
 }
 .add-form__user-error {
   top: 9.5rem;
