--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,12 @@
 :-moz-placeholder {
   color: #c6cedc;
 }
+button,
+input,
+select,
+textarea {
+  font-family: 'Roboto', sans-serif;
+}
 input[type='email'],
 input[type='number'],
 input[type='password'],
