--- a/src/styles/recipe-page.css
+++ b/src/styles/recipe-page.css
@@ -84,9 +84,9 @@ input[type='number'].edit-number-input {
   overflow: hidden;
   position: fixed;
   color: #fff;
-  padding: 1em;
-  bottom: 4rem;
-  right: 4rem;
+  bottom: 2rem;
+  right: 2rem;
+  padding: 2rem;
 }
 .edit-button {
   font-size: 2.6rem;
@@ -94,6 +94,10 @@ input[type='number'].edit-number-input {
   margin: 1rem 0 0;
   width: 6rem;
   height: 6rem;
+  box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
   display: flex;
   justify-content: center;
+}
+.edit-button:focus {
+  box-shadow: 0 4px 5px 2px rgba(0,0,0,.2), 0 1px 10px 2px rgba(0,0,0,.2), 0 2px 4px -1px rgba(0,0,0,.3);
 }
