--- a/src/styles/recipe-page.css
+++ b/src/styles/recipe-page.css
@@ -87,6 +87,7 @@ input[type='number'].edit-number-input {
   bottom: 2rem;
   right: 2rem;
   padding: 2rem;
+  z-index: 99;
 }
 .edit-button {
   font-size: 2.6rem;
