--- a/src/styles/recipe-page.css
+++ b/src/styles/recipe-page.css
@@ -111,6 +111,7 @@ input[type="number"].edit-number-input {
     0 2px 4px -1px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .edit-button:focus {
   box-shadow: 0 4px 5px 2px rgba(0, 0, 0, 0.2), 0 1px 10px 2px rgba(0, 0, 0, 0.2),
